Fix docs page text overflow issue

--- a/assets/admin/css/settings.css
+++ b/assets/admin/css/settings.css
@@ -1,29 +1,3 @@
-/* Documentation Page */
-
-.ots-documentation .form-table th,
-.ots-documentation .form-table td {
-    display: block;
-}
-
-.ots-documentation .form-table th {
-    width: 100%;
-    padding: 15px 0 5px 0;
-    margin: 0 20px 0 20px;
-    font-size: 16px;
-}
-
-.ots-documentation .form-table td {
-    padding: 10px 20px;
-}
-
-.ots-documentation .form-table td p {
-    margin: 0 10px 15px 10px;
-}
-
-.ots-documentation .media img {
-    max-width: 100%;
-}
-
 
 /* Settings page */
 #ots-display-limit-number {
@@ -304,6 +278,37 @@
         margin-left: 0;
     }
 }
+
+
+/* Documentation Page */
+
+.ots-documentation .form-table th,
+.ots-documentation .form-table td {
+    display: block;
+}
+
+.ots-documentation .form-table th {
+    padding: 15px 0 5px 0;
+    margin: 0 20px 0 20px;
+    font-size: 16px;
+}
+
+.ots-documentation .form-table td {
+    padding: 10px 20px;
+}
+
+.ots-documentation .form-table td p {
+    margin: 0 10px 15px 10px;
+}
+
+.ots-documentation .media img {
+    max-width: 100%;
+}
+
+.ots-documentation code {
+    word-break: break-all;
+}
+
 
 
 /* Reorder Page */
